<?xml version="1.0"?>
<package format="2">
  <name>adlink_ros2_turtlebot</name>
  <version>0.4.0</version>
  <description>Launch files for turtlebot2 slam_karto demo</description>
  <maintainer email="haochih.lin@adlinktech.com">HaoChih, Lin</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>ydlidar</exec_depend>
  <exec_depend>slam_karto</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>ros2run</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>turtlebot2_drivers</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
